feat(api): add telegram badge
